--- a/src/styles/layout/_content.scss
+++ b/src/styles/layout/_content.scss
@@ -37,14 +37,14 @@ p {
 
 h1 {
   @include font($font-size-h1, $line-height-h1, $title-color);
-  font-family: 'Tenor Sans';
+  font-family: "Tenor Sans";
   text-transform: capitalize;
   font-weight: 400;
 }
 
 h2 {
   @include font($font-size-h2, $line-height-h2, $title-color);
-  font-family: 'Tenor Sans';
+  font-family: "Tenor Sans";
   text-transform: capitalize;
   font-weight: 400;
 }
@@ -52,14 +52,14 @@ h2 {
 h3 {
   @include font($font-size-h3, $line-height-h3, $title-color);
   font-weight: 400;
-  font-family: 'Tenor Sans';
+  font-family: "Tenor Sans";
   text-transform: capitalize;
 }
 
 h4 {
   font-size: 32px;
   line-height: 130%;
-  font-family: 'Tenor Sans';
+  font-family: "Tenor Sans";
   text-transform: capitalize;
   font-weight: 400;
 }
@@ -68,7 +68,7 @@ h5,
 .title5 {
   font-size: 24px;
   line-height: 100%;
-  font-family: 'Tenor Sans';
+  font-family: "Tenor Sans";
   text-transform: capitalize;
   font-weight: 400;
   color: #222222;
@@ -78,7 +78,7 @@ h6,
 .title6 {
   font-size: 20px;
   line-height: 120%;
-  font-family: 'Tenor Sans';
+  font-family: "Tenor Sans";
   text-transform: capitalize;
   font-weight: 400;
   color: #222222;
@@ -152,7 +152,7 @@ h6,
   text-transform: uppercase;
   display: inline-block;
   transition: $transition;
-  font-family: 'Lato';
+  font-family: "Lato";
 
   &:hover {
     background: #545454;
@@ -182,7 +182,7 @@ h6,
 }
 
 .saint-text {
-  font-family: 'Mrs Saint Delafield';
+  font-family: "Mrs Saint Delafield";
   color: #de8c06;
   display: block;
   font-size: 50px;
@@ -191,7 +191,7 @@ h6,
 
 .main-text {
   display: block;
-  font-family: 'Tenor Sans';
+  font-family: "Tenor Sans";
   color: #222222;
   font-size: 100px;
   margin-bottom: 30px;
@@ -202,7 +202,7 @@ h6,
     position: relative;
 
     &:before {
-      content: '';
+      content: "";
       position: absolute;
       left: 45%;
       top: 50%;
@@ -255,7 +255,7 @@ h6,
     max-width: 465px;
     font-size: 20px;
     line-height: 150%;
-    font-family: 'Tenor Sans';
+    font-family: "Tenor Sans";
     padding-left: 10px;
   }
 
@@ -475,7 +475,7 @@ h6,
       color: #222222;
       display: block;
       margin-bottom: 9px;
-      font-family: 'Tenor Sans';
+      font-family: "Tenor Sans";
       padding: 0 3px;
     }
 
@@ -534,7 +534,7 @@ h6,
   }
 
   &.slick-prev::before {
-    content: '';
+    content: "";
   }
 
   &.slick-next {
@@ -543,7 +543,7 @@ h6,
     left: auto;
 
     &::before {
-      content: '';
+      content: "";
     }
   }
 
@@ -595,13 +595,13 @@ h6,
     p {
       font-size: 20px;
       line-height: 150%;
-      font-family: 'Tenor Sans';
+      font-family: "Tenor Sans";
       padding-left: 10px;
 
       &.discount-info__sm {
         font-size: 16px;
         line-height: 170%;
-        font-family: 'Lato';
+        font-family: "Lato";
       }
     }
 
@@ -617,7 +617,6 @@ h6,
 .advantages {
   padding-top: 100px;
   padding-bottom: 100px;
-
 
   &-items {
     display: flex;
@@ -639,7 +638,7 @@ h6,
         font-size: 70px;
 
         &:after {
-          content: '';
+          content: "";
           position: absolute;
           left: 50%;
           top: 50%;
@@ -732,7 +731,7 @@ h6,
         margin-top: 44px;
 
         &:after {
-          content: '';
+          content: "";
           position: absolute;
           left: 50%;
           top: 50%;
@@ -827,7 +826,7 @@ h6,
         span {
           font-size: 40px;
           line-height: 140%;
-          font-family: 'Tenor Sans';
+          font-family: "Tenor Sans";
           display: block;
           color: #fff;
           margin-bottom: 45px;
@@ -852,7 +851,7 @@ h6,
           height: calc(100% + 25px);
           border: 3px solid #ffffff;
           filter: blur(5px);
-          content: '';
+          content: "";
           border-radius: 50%;
         }
 
@@ -891,7 +890,7 @@ h6,
       color: #666666;
       display: block;
       max-width: 456px;
-      font-family: 'Tenor Sans';
+      font-family: "Tenor Sans";
       margin-top: 31px;
     }
 
@@ -1008,7 +1007,7 @@ h6,
     z-index: 1;
 
     &:after {
-      content: '';
+      content: "";
       position: absolute;
       left: 50%;
       top: 50%;
@@ -1042,7 +1041,7 @@ h6,
     font-size: 24px;
     line-height: 26px;
     color: #222222;
-    font-family: 'Tenor Sans';
+    font-family: "Tenor Sans";
     margin-bottom: 15px;
 
     // display: -webkit-box;
@@ -1114,7 +1113,7 @@ h6,
       }
 
       &:after {
-        content: '';
+        content: "";
         position: absolute;
         left: 47%;
         top: 60%;
@@ -1318,7 +1317,7 @@ h6,
       top: 40%;
       transform: translateY(-50%);
       right: -15px;
-      content: '-';
+      content: "-";
       color: #666666;
     }
 
@@ -1399,7 +1398,7 @@ h6,
       z-index: 1;
 
       &:after {
-        content: '';
+        content: "";
         position: absolute;
         left: 50%;
         top: 50%;
@@ -1471,7 +1470,7 @@ h6,
     p {
       font-size: 20px;
       line-height: 150%;
-      font-family: 'Tenor Sans';
+      font-family: "Tenor Sans";
     }
   }
 
@@ -1642,7 +1641,7 @@ h6,
       height: 100%;
       left: 0;
       top: 0;
-      content: '';
+      content: "";
       mix-blend-mode: multiply;
       // background-color: rgba($color: #FCEDEA, $alpha: 0.5);
       background-color: #fcedea;
@@ -1701,7 +1700,7 @@ h6,
       font-size: 20px;
       line-height: 150%;
       color: #222222;
-      font-family: 'Tenor Sans';
+      font-family: "Tenor Sans";
       padding-bottom: 18px;
       display: flex;
       align-items: center;
@@ -1711,7 +1710,7 @@ h6,
       }
 
       &-num {
-        font-family: 'Lato';
+        font-family: "Lato";
         position: relative;
         width: 40px;
         text-align: center;
@@ -1721,7 +1720,7 @@ h6,
         padding-top: 2px;
 
         &:after {
-          content: '';
+          content: "";
           position: absolute;
           left: 50%;
           top: 50%;
@@ -1753,7 +1752,7 @@ h6,
 
         &:before,
         &:after {
-          content: '';
+          content: "";
           position: absolute;
           background: #222222;
         }
@@ -1779,7 +1778,7 @@ h6,
         position: absolute;
         right: 0;
         bottom: 0;
-        content: '';
+        content: "";
         background-color: #eeeeee;
         width: 95.5%;
         height: 1px;
@@ -1799,7 +1798,7 @@ h6,
         position: absolute;
         right: 0;
         bottom: 0;
-        content: '';
+        content: "";
         background-color: #eeeeee;
         width: 95.5%;
         height: 1px;
@@ -1965,7 +1964,7 @@ h6,
       font-size: 20px;
       line-height: 150%;
       color: #666666;
-      font-family: 'Tenor Sans';
+      font-family: "Tenor Sans";
     }
 
     img {
@@ -2054,7 +2053,7 @@ h6,
         margin-bottom: 6px;
         font-size: 20px;
         line-height: 120%;
-        font-family: 'Tenor Sans';
+        font-family: "Tenor Sans";
         color: #222222;
         text-transform: capitalize;
       }
@@ -2236,7 +2235,7 @@ h6,
         right: -21px;
         top: 50%;
         transform: translateY(-50%);
-        content: '';
+        content: "";
         width: 1px;
         height: 10px;
         background-color: #eee;
@@ -2337,21 +2336,25 @@ h6,
   height: 56px;
   border-radius: 50%;
   background: #de8c06;
-  -webkit-mask: radial-gradient(circle closest-side at 50% 40%,#0000 94%, #000);
+  -webkit-mask: radial-gradient(
+    circle closest-side at 50% 40%,
+    #0000 94%,
+    #000
+  );
   transform-origin: 50% 40%;
   animation: spinner-pl92zb 1s infinite linear;
 }
 
 @keyframes spinner-pl92zb {
   100% {
-     transform: rotate(1turn);
+    transform: rotate(1turn);
   }
 }
 blockquote,
 .blockquote {
   font-size: 20px;
   line-height: 150%;
-  font-family: 'Tenor Sans';
+  font-family: "Tenor Sans";
   color: #222222;
   padding: 45px 72px;
   background: #faf9ff;
@@ -2359,7 +2362,7 @@ blockquote,
   margin-bottom: 70px;
 
   &:after {
-    content: '';
+    content: "";
     position: absolute;
     right: 0;
     bottom: 0;
@@ -2378,7 +2381,7 @@ blockquote,
   text-transform: capitalize;
   font-size: 24px;
   line-height: 100%;
-  font-family: 'Tenor Sans';
+  font-family: "Tenor Sans";
   margin-top: 23px;
 }
 
@@ -2404,7 +2407,6 @@ blockquote,
 .shop {
   padding-top: 180px;
   position: relative;
-
 
   .promo-video__decor {
     top: 2.5%;
@@ -2453,7 +2455,7 @@ blockquote,
         text-transform: capitalize;
         padding-bottom: 10px;
         color: #222222;
-        font-family: 'Tenor Sans';
+        font-family: "Tenor Sans";
         border-bottom: 2px solid #222222;
         margin-bottom: 15px;
       }
@@ -2644,17 +2646,17 @@ blockquote,
 }
 
 .box-field__search {
-  input[type='search']::-webkit-search-decoration,
-  input[type='search']::-webkit-search-cancel-button,
-  input[type='search']::-webkit-search-results-button,
-  input[type='search']::-webkit-search-results-decoration {
+  input[type="search"]::-webkit-search-decoration,
+  input[type="search"]::-webkit-search-cancel-button,
+  input[type="search"]::-webkit-search-results-button,
+  input[type="search"]::-webkit-search-results-decoration {
     -webkit-appearance: none;
   }
 }
 
 .irs {
   height: auto;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   margin-top: -15px;
 
   .irs-line {
@@ -2753,7 +2755,7 @@ blockquote,
 }
 
 .checkmark:after {
-  content: '';
+  content: "";
   position: absolute;
   display: none;
 }
@@ -2765,7 +2767,7 @@ blockquote,
 .jq-selectbox {
   &__select {
     box-shadow: none;
-    font-family: 'Lato', sans-serif;
+    font-family: "Lato", sans-serif;
     border: 1px solid #eeeeee !important;
     border-radius: 0;
     background: #faf9ff;
@@ -2814,7 +2816,7 @@ blockquote,
       padding: 7px 30px;
       font-size: 16px;
       line-height: 170%;
-      font-family: 'Lato', sans-serif;
+      font-family: "Lato", sans-serif;
       transition: $transition;
       color: #666666;
 
@@ -2880,7 +2882,7 @@ blockquote,
           height: 100%;
           top: 0;
           left: 0;
-          content: '';
+          content: "";
           background-color: rgba(34, 34, 34, 0.15);
           opacity: 0;
           transition: $transition;
@@ -3151,7 +3153,7 @@ blockquote,
       right: -21px;
       top: 50%;
       transform: translateY(-50%);
-      content: '';
+      content: "";
       width: 1px;
       height: 10px;
       background-color: #eee;
@@ -3168,7 +3170,7 @@ blockquote,
       right: -29px;
       top: 50%;
       transform: translateY(-50%);
-      content: '';
+      content: "";
       width: 1px;
       height: 10px;
       background-color: #eee;
@@ -3252,7 +3254,7 @@ blockquote,
     color: #fff;
     cursor: pointer;
     transition: $transition;
-    font-family: 'icomoon';
+    font-family: "icomoon";
 
     &.active {
       color: #cfc819;
@@ -3287,7 +3289,7 @@ blockquote,
       &-head {
         font-size: 20px;
         line-height: 120%;
-        font-family: 'Tenor Sans';
+        font-family: "Tenor Sans";
         color: #222222;
         text-transform: capitalize;
         border: none;
@@ -3797,7 +3799,7 @@ blockquote,
             display: inline-block;
             color: #999999;
             text-transform: initial;
-            font-family: 'Lato', sans-serif;
+            font-family: "Lato", sans-serif;
           }
 
           &:hover {
@@ -3913,7 +3915,7 @@ blockquote,
   padding-left: 34px;
   cursor: pointer;
   color: #222222;
-  font-family: 'Tenor Sans';
+  font-family: "Tenor Sans";
   font-size: 20px;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -3942,7 +3944,7 @@ blockquote,
       font-size: 12px;
       line-height: 145%;
       text-transform: initial;
-      font-family: 'Lato', sans-serif;
+      font-family: "Lato", sans-serif;
       color: #999999;
       width: 250px;
       left: 43px;
@@ -3958,7 +3960,7 @@ blockquote,
         border-right: 10px solid transparent;
         border-top: 10px solid #fcedea;
         transform: rotate(180deg);
-        content: '';
+        content: "";
       }
     }
 
@@ -3992,7 +3994,7 @@ blockquote,
 }
 
 .radio-box .checkmark:after {
-  content: '';
+  content: "";
   position: absolute;
   display: none;
 }
@@ -4198,7 +4200,7 @@ blockquote,
       margin-left: 5px;
       font-size: 20px;
       line-height: 120%;
-      font-family: 'Tenor Sans';
+      font-family: "Tenor Sans";
       text-transform: capitalize;
       margin-bottom: 11px;
     }
@@ -4236,7 +4238,7 @@ blockquote,
   &__title {
     font-size: 40px;
     line-height: 100%;
-    font-family: 'Tenor Sans';
+    font-family: "Tenor Sans";
     color: #2f3237;
     margin-bottom: 20px;
     text-transform: capitalize;
@@ -4285,22 +4287,22 @@ blockquote,
   color: #666666;
 }
 
-input[type='search']::-ms-clear {
+input[type="search"]::-ms-clear {
   display: none;
   width: 0;
   height: 0;
 }
 
-input[type='search']::-ms-reveal {
+input[type="search"]::-ms-reveal {
   display: none;
   width: 0;
   height: 0;
 }
 
-input[type='search']::-webkit-search-decoration,
-input[type='search']::-webkit-search-cancel-button,
-input[type='search']::-webkit-search-results-button,
-input[type='search']::-webkit-search-results-decoration {
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
   display: none;
 }
 
@@ -4377,7 +4379,7 @@ input[type='search']::-webkit-search-results-decoration {
           font-size: 20px;
           line-height: 150%;
           display: block;
-          font-family: 'Tenor Sans';
+          font-family: "Tenor Sans";
           margin-bottom: 5px;
           color: #222222;
 
@@ -4406,7 +4408,7 @@ input[type='search']::-webkit-search-results-decoration {
         line-height: 110%;
         color: #222222;
         text-align: right;
-        font-family: 'Tenor Sans';
+        font-family: "Tenor Sans";
         margin-bottom: 38px;
 
         span {
@@ -4417,7 +4419,7 @@ input[type='search']::-webkit-search-results-decoration {
           margin-top: 16px;
 
           &:before {
-            content: '';
+            content: "";
             position: absolute;
             left: 65%;
             top: 50%;
@@ -4455,7 +4457,7 @@ input[type='search']::-webkit-search-results-decoration {
       align-items: center;
 
       &-head {
-        font-family: 'Tenor Sans';
+        font-family: "Tenor Sans";
         font-size: 20px;
         line-height: 120%;
         text-transform: capitalize;
@@ -4544,7 +4546,7 @@ input[type='search']::-webkit-search-results-decoration {
           right: 0;
           top: 50%;
           transform: translateY(-50%);
-          content: '';
+          content: "";
           height: 35px;
           width: 1px;
           background-color: #eeeeee;
@@ -4584,7 +4586,7 @@ input[type='search']::-webkit-search-results-decoration {
 
           &:before,
           &:after {
-            content: '';
+            content: "";
             position: absolute;
             background: #222222;
           }
@@ -4665,7 +4667,7 @@ input[type='search']::-webkit-search-results-decoration {
           }
 
           &:last-of-type {
-            font-family: 'Tenor Sans';
+            font-family: "Tenor Sans";
             font-size: 20px;
             line-height: 120%;
             text-transform: capitalize;
@@ -4676,7 +4678,7 @@ input[type='search']::-webkit-search-results-decoration {
             span {
               font-size: 16px;
               line-height: 170%;
-              font-family: 'Lato';
+              font-family: "Lato";
               color: #666666;
               text-transform: initial;
             }
@@ -5638,15 +5640,15 @@ input[type='search']::-webkit-search-results-decoration {
         left: 0;
         width: 100%;
         height: 100%;
-        content: '';
+        content: "";
         background-color: rgba($color: #222222, $alpha: 0.15);
         z-index: 10;
       }
     }
   }
-.cardIcon:hover{
-  transform: scale(1.1);
-}
+  .cardIcon:hover {
+    transform: scale(1.1);
+  }
   .wrapper {
     padding-left: 15px;
     padding-right: 15px;
@@ -6262,7 +6264,7 @@ input[type='search']::-webkit-search-results-decoration {
       width: 100%;
       height: 100%;
       z-index: -1;
-      content: '';
+      content: "";
       background-color: rgba(255, 255, 255, 0.5);
       position: absolute;
       left: 0;
@@ -6998,8 +7000,6 @@ input[type='search']::-webkit-search-results-decoration {
 
 @media screen and (max-width: 480px) {
   .main-block {
-   
-
     &.load-bg {
       background-image: none;
     }
@@ -7055,7 +7055,6 @@ input[type='search']::-webkit-search-results-decoration {
   }
 }
 
-
 .header-options input[type="text"] {
   border: 1px solid #ccc; /* Light border for a subtle outline */
   border-radius: 5px; /* Rounded corners */
@@ -7067,4 +7066,14 @@ input[type='search']::-webkit-search-results-decoration {
 
 .header-options input[type="text"]:focus {
   border-color: #888; /* Darker border on focus */
+}
+.search-result {
+  transition-duration: 0.7s;
+}
+
+.search-result:hover {
+  transform: scale(1.05);
+}
+.search-result:hover h5 {
+  color: #de8c06;
 }
