--- a/src/styles/layout/_content.scss
+++ b/src/styles/layout/_content.scss
@@ -182,21 +182,21 @@ h6,
 }
 
 .saint-text {
-  color: #D47E00;
+  color: #ab0909;
   display: block;
-  font-size: 60px;
+  font-size: 40px;
   text-transform: capitalize;
 }
 
 .main-text {
   display: block;
   color: #222222;
-  font-size: 80px;
+  font-size: 40px;
   margin-bottom: 30px;
   margin-top: 4px;
 
   span {
-    color: #D47E00;
+    color: #ab0909;
     position: relative;
 
     &:before {
@@ -220,8 +220,7 @@ h6,
 
 .main-block {
   padding-top: 340px;
-  padding-bottom: 237px;
-  // background-image: url(/assets/img/main-bg.jpg);
+  padding-bottom: 237px; // background-image: url(/assets/img/main-bg.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -241,14 +240,12 @@ h6,
   }
 
   .saint-text {
-    font-size: 100px;
-    padding-left: 9px;
+    font-size: 40px;
     font-weight: 500;
   }
 
   .main-text {
     line-height: normal;
-
   }
 
   p {
@@ -331,7 +328,7 @@ h6,
 
       &.active {
         a {
-          background: #D47E00;
+          background: #ab0909;
           color: #ffffff;
         }
       }
@@ -419,7 +416,7 @@ h6,
           font-size: 20px;
 
           &.icon-cart {
-            background: #D47E00;
+            background: #ab0909;
             color: #fff;
           }
 
@@ -428,7 +425,7 @@ h6,
           }
 
           &.active {
-            background: #D47E00;
+            background: #ab0909;
             color: #fff;
           }
         }
@@ -1051,7 +1048,7 @@ h6,
     // overflow: hidden;
     // text-transform: capitalize;
     &:hover {
-      color: #D47E00;
+      color: #ab0909;
     }
   }
 
@@ -1310,7 +1307,7 @@ h6,
     margin: 0 13px;
     font-size: 16px;
     line-height: 170%;
-    color: #D47E00;
+    color: #ab0909;
     position: relative;
 
     &:after {
@@ -1326,7 +1323,7 @@ h6,
       color: #666666;
 
       &:hover {
-        color: #D47E00;
+        color: #ab0909;
       }
     }
 
@@ -1393,7 +1390,7 @@ h6,
       font-size: 54px;
       line-height: 100%;
       text-transform: capitalize;
-      color: #D47E00;
+      color: #ab0909;
       display: block;
       margin-bottom: 42px;
       z-index: 1;
@@ -1814,7 +1811,7 @@ h6,
       }
 
       .faq-item__head {
-        color: #D47E00;
+        color: #ab0909;
       }
 
       .faq-item__head-btn {
@@ -2336,7 +2333,7 @@ h6,
   width: 56px;
   height: 56px;
   border-radius: 50%;
-  background: #D47E00;
+  background: #ab0909;
   -webkit-mask: radial-gradient(
     circle closest-side at 50% 40%,
     #0000 94%,
@@ -2378,7 +2375,7 @@ blockquote,
 
 .blockquote-author {
   display: block;
-  color: #D47E00;
+  color: #ab0909;
   text-transform: capitalize;
   font-size: 24px;
   line-height: 100%;
@@ -2478,11 +2475,11 @@ blockquote,
             }
 
             &:hover {
-              color: #D47E00;
-              border-color: #D47E00;
+              color: #ab0909;
+              border-color: #ab0909;
 
               span {
-                color: #D47E00;
+                color: #ab0909;
               }
             }
           }
@@ -2493,22 +2490,22 @@ blockquote,
         margin-bottom: 123px;
 
         .rc-slider-handle {
-          border: solid 2px #D47E00;
-          background-color: #D47E00;
+          border: solid 2px #ab0909;
+          background-color: #ab0909;
 
           &:hover {
-            border-color: #D47E00;
+            border-color: #ab0909;
             cursor: pointer;
           }
         }
 
         .rc-slider-handle:active {
-          border-color: #D47E00;
-          box-shadow: 0 0 5px #D47E00;
+          border-color: #ab0909;
+          box-shadow: 0 0 5px #ab0909;
         }
 
         .rc-slider-track {
-          background-color: #D47E00;
+          background-color: #ab0909;
         }
 
         .rc-slider-tooltip-hidden {
@@ -2568,7 +2565,7 @@ blockquote,
 
         &:hover {
           .shop-aside__item-product-title {
-            color: #D47E00;
+            color: #ab0909;
           }
         }
       }
@@ -2666,13 +2663,13 @@ blockquote,
 
   .irs-bar {
     height: 3px;
-    background-color: #D47E00;
+    background-color: #ab0909;
   }
 
   .irs-handle {
-    background-color: #D47E00;
+    background-color: #ab0909;
     box-shadow: none;
-    border-color: #D47E00;
+    border-color: #ab0909;
     width: 15px;
     height: 15px;
     top: 30px;
@@ -2680,7 +2677,7 @@ blockquote,
 
     &:hover,
     &.state_hover {
-      background-color: #D47E00;
+      background-color: #ab0909;
     }
   }
 
@@ -2752,7 +2749,7 @@ blockquote,
 }
 
 .checkbox-box input:checked ~ .checkmark {
-  background-color: #D47E00;
+  background-color: #ab0909;
 }
 
 .checkmark:after {
@@ -2829,7 +2826,7 @@ blockquote,
 
       &.sel {
         background-color: #fff;
-        color: #D47E00;
+        color: #ab0909;
       }
     }
   }
@@ -2902,7 +2899,7 @@ blockquote,
         }
 
         &.slick-current {
-          border: 2px solid #D47E00;
+          border: 2px solid #ab0909;
 
           &:hover {
             &:after {
@@ -2914,7 +2911,7 @@ blockquote,
 
       & .slick-current {
         & img {
-          border: 2px solid #D47E00;
+          border: 2px solid #ab0909;
         }
       }
     }
@@ -2998,7 +2995,7 @@ blockquote,
 
         &:hover,
         &.active {
-          border: 2px solid #D47E00;
+          border: 2px solid #ab0909;
         }
       }
     }
@@ -3108,8 +3105,8 @@ blockquote,
 
     &.active {
       // a {
-      background: #D47E00;
-      border-color: #D47E00;
+      background: #ab0909;
+      border-color: #ab0909;
       color: #ffffff;
     }
   }
@@ -3341,7 +3338,7 @@ blockquote,
 
       .title5 {
         &:hover {
-          color: #D47E00;
+          color: #ab0909;
         }
       }
 
@@ -3804,7 +3801,7 @@ blockquote,
           }
 
           &:hover {
-            color: #D47E00;
+            color: #ab0909;
           }
         }
       }
@@ -4011,7 +4008,7 @@ blockquote,
   width: 10px;
   height: 10px;
   border-radius: 50%;
-  background: #D47E00;
+  background: #ab0909;
 }
 
 .checkout-purchase {
@@ -4047,7 +4044,7 @@ blockquote,
     font-size: 14px;
     line-height: 170%;
     text-transform: uppercase;
-    color: #D47E00;
+    color: #ab0909;
     display: block;
 
     &:hover {
@@ -4168,7 +4165,7 @@ blockquote,
       }
 
       a {
-        color: #D47E00;
+        color: #ab0909;
         cursor: pointer;
 
         &:hover {
@@ -4385,7 +4382,7 @@ input[type="search"]::-webkit-search-results-decoration {
           color: #222222;
 
           &:hover {
-            color: #D47E00;
+            color: #ab0909;
           }
         }
 
@@ -4414,7 +4411,7 @@ input[type="search"]::-webkit-search-results-decoration {
 
         span {
           font-size: 60px;
-          color: #D47E00;
+          color: #ab0909;
           position: relative;
           display: inline-block;
           margin-top: 16px;
@@ -4613,7 +4610,7 @@ input[type="search"]::-webkit-search-results-decoration {
           font-size: 12px;
           line-height: 170%;
           text-transform: uppercase;
-          color: #D47E00;
+          color: #ab0909;
         }
 
         &-delivered {
@@ -4642,7 +4639,7 @@ input[type="search"]::-webkit-search-results-decoration {
           }
 
           &:after {
-            background: #D47E00;
+            background: #ab0909;
           }
         }
       }
@@ -4745,7 +4742,7 @@ input[type="search"]::-webkit-search-results-decoration {
 
     &.is-selected {
       background-color: #fff;
-      color: #D47E00;
+      color: #ab0909;
     }
 
     &:hover {
@@ -5069,7 +5066,7 @@ input[type="search"]::-webkit-search-results-decoration {
   }
 
   .main-text {
-    font-size: 83px;
+    font-size: 40px;
   }
 
   .main-block__content {
@@ -5686,7 +5683,7 @@ input[type="search"]::-webkit-search-results-decoration {
   }
 
   .main-text {
-    font-size: 80px;
+    font-size: 50px;
   }
 
   .main-block p {
@@ -7110,5 +7107,5 @@ input[type="search"]::-webkit-search-results-decoration {
   transform: scale(1.05);
 }
 .search-result:hover h5 {
-  color: #D47E00;
+  color: #ab0909;
 }
