--- a/src/styles/layout/_content.scss
+++ b/src/styles/layout/_content.scss
@@ -182,7 +182,7 @@ h6,
 }
 
 .saint-text {
-  color: #ab0909;
+  color: #D47E00;
   display: block;
   font-size: 40px;
   text-transform: capitalize;
@@ -196,7 +196,7 @@ h6,
   margin-top: 4px;
 
   span {
-    color: #ab0909;
+    color: #D47E00;
     position: relative;
 
     &:before {
@@ -328,7 +328,7 @@ h6,
 
       &.active {
         a {
-          background: #ab0909;
+          background: #D47E00;
           color: #ffffff;
         }
       }
@@ -416,7 +416,7 @@ h6,
           font-size: 20px;
 
           &.icon-cart {
-            background: #ab0909;
+            background: #D47E00;
             color: #fff;
           }
 
@@ -425,7 +425,7 @@ h6,
           }
 
           &.active {
-            background: #ab0909;
+            background: #D47E00;
             color: #fff;
           }
         }
@@ -1048,7 +1048,7 @@ h6,
     // overflow: hidden;
     // text-transform: capitalize;
     &:hover {
-      color: #ab0909;
+      color: #D47E00;
     }
   }
 
@@ -1307,7 +1307,7 @@ h6,
     margin: 0 13px;
     font-size: 16px;
     line-height: 170%;
-    color: #ab0909;
+    color: #D47E00;
     position: relative;
 
     &:after {
@@ -1323,7 +1323,7 @@ h6,
       color: #666666;
 
       &:hover {
-        color: #ab0909;
+        color: #D47E00;
       }
     }
 
@@ -1390,7 +1390,7 @@ h6,
       font-size: 54px;
       line-height: 100%;
       text-transform: capitalize;
-      color: #ab0909;
+      color: #D47E00;
       display: block;
       margin-bottom: 42px;
       z-index: 1;
@@ -1811,7 +1811,7 @@ h6,
       }
 
       .faq-item__head {
-        color: #ab0909;
+        color: #D47E00;
       }
 
       .faq-item__head-btn {
@@ -2333,7 +2333,7 @@ h6,
   width: 56px;
   height: 56px;
   border-radius: 50%;
-  background: #ab0909;
+  background: #D47E00;
   -webkit-mask: radial-gradient(
     circle closest-side at 50% 40%,
     #0000 94%,
@@ -2375,7 +2375,7 @@ blockquote,
 
 .blockquote-author {
   display: block;
-  color: #ab0909;
+  color: #D47E00;
   text-transform: capitalize;
   font-size: 24px;
   line-height: 100%;
@@ -2475,11 +2475,11 @@ blockquote,
             }
 
             &:hover {
-              color: #ab0909;
-              border-color: #ab0909;
+              color: #D47E00;
+              border-color: #D47E00;
 
               span {
-                color: #ab0909;
+                color: #D47E00;
               }
             }
           }
@@ -2490,22 +2490,22 @@ blockquote,
         margin-bottom: 123px;
 
         .rc-slider-handle {
-          border: solid 2px #ab0909;
-          background-color: #ab0909;
+          border: solid 2px #D47E00;
+          background-color: #D47E00;
 
           &:hover {
-            border-color: #ab0909;
+            border-color: #D47E00;
             cursor: pointer;
           }
         }
 
         .rc-slider-handle:active {
-          border-color: #ab0909;
-          box-shadow: 0 0 5px #ab0909;
+          border-color: #D47E00;
+          box-shadow: 0 0 5px #D47E00;
         }
 
         .rc-slider-track {
-          background-color: #ab0909;
+          background-color: #D47E00;
         }
 
         .rc-slider-tooltip-hidden {
@@ -2565,7 +2565,7 @@ blockquote,
 
         &:hover {
           .shop-aside__item-product-title {
-            color: #ab0909;
+            color: #D47E00;
           }
         }
       }
@@ -2663,13 +2663,13 @@ blockquote,
 
   .irs-bar {
     height: 3px;
-    background-color: #ab0909;
+    background-color: #D47E00;
   }
 
   .irs-handle {
-    background-color: #ab0909;
+    background-color: #D47E00;
     box-shadow: none;
-    border-color: #ab0909;
+    border-color: #D47E00;
     width: 15px;
     height: 15px;
     top: 30px;
@@ -2677,7 +2677,7 @@ blockquote,
 
     &:hover,
     &.state_hover {
-      background-color: #ab0909;
+      background-color: #D47E00;
     }
   }
 
@@ -2749,7 +2749,7 @@ blockquote,
 }
 
 .checkbox-box input:checked ~ .checkmark {
-  background-color: #ab0909;
+  background-color: #D47E00;
 }
 
 .checkmark:after {
@@ -2826,7 +2826,7 @@ blockquote,
 
       &.sel {
         background-color: #fff;
-        color: #ab0909;
+        color: #D47E00;
       }
     }
   }
@@ -2899,7 +2899,7 @@ blockquote,
         }
 
         &.slick-current {
-          border: 2px solid #ab0909;
+          border: 2px solid #D47E00;
 
           &:hover {
             &:after {
@@ -2911,7 +2911,7 @@ blockquote,
 
       & .slick-current {
         & img {
-          border: 2px solid #ab0909;
+          border: 2px solid #D47E00;
         }
       }
     }
@@ -2995,7 +2995,7 @@ blockquote,
 
         &:hover,
         &.active {
-          border: 2px solid #ab0909;
+          border: 2px solid #D47E00;
         }
       }
     }
@@ -3105,8 +3105,8 @@ blockquote,
 
     &.active {
       // a {
-      background: #ab0909;
-      border-color: #ab0909;
+      background: #D47E00;
+      border-color: #D47E00;
       color: #ffffff;
     }
   }
@@ -3338,7 +3338,7 @@ blockquote,
 
       .title5 {
         &:hover {
-          color: #ab0909;
+          color: #D47E00;
         }
       }
 
@@ -3801,7 +3801,7 @@ blockquote,
           }
 
           &:hover {
-            color: #ab0909;
+            color: #D47E00;
           }
         }
       }
@@ -4008,7 +4008,7 @@ blockquote,
   width: 10px;
   height: 10px;
   border-radius: 50%;
-  background: #ab0909;
+  background: #D47E00;
 }
 
 .checkout-purchase {
@@ -4044,7 +4044,7 @@ blockquote,
     font-size: 14px;
     line-height: 170%;
     text-transform: uppercase;
-    color: #ab0909;
+    color: #D47E00;
     display: block;
 
     &:hover {
@@ -4165,7 +4165,7 @@ blockquote,
       }
 
       a {
-        color: #ab0909;
+        color: #D47E00;
         cursor: pointer;
 
         &:hover {
@@ -4382,7 +4382,7 @@ input[type="search"]::-webkit-search-results-decoration {
           color: #222222;
 
           &:hover {
-            color: #ab0909;
+            color: #D47E00;
           }
         }
 
@@ -4411,7 +4411,7 @@ input[type="search"]::-webkit-search-results-decoration {
 
         span {
           font-size: 60px;
-          color: #ab0909;
+          color: #D47E00;
           position: relative;
           display: inline-block;
           margin-top: 16px;
@@ -4610,7 +4610,7 @@ input[type="search"]::-webkit-search-results-decoration {
           font-size: 12px;
           line-height: 170%;
           text-transform: uppercase;
-          color: #ab0909;
+          color: #D47E00;
         }
 
         &-delivered {
@@ -4639,7 +4639,7 @@ input[type="search"]::-webkit-search-results-decoration {
           }
 
           &:after {
-            background: #ab0909;
+            background: #D47E00;
           }
         }
       }
@@ -4742,7 +4742,7 @@ input[type="search"]::-webkit-search-results-decoration {
 
     &.is-selected {
       background-color: #fff;
-      color: #ab0909;
+      color: #D47E00;
     }
 
     &:hover {
@@ -7107,5 +7107,5 @@ input[type="search"]::-webkit-search-results-decoration {
   transform: scale(1.05);
 }
 .search-result:hover h5 {
-  color: #ab0909;
+  color: #D47E00;
 }
