--- a/src/styles/layout/_content.scss
+++ b/src/styles/layout/_content.scss
@@ -151,7 +151,7 @@ h6,
   padding: 0 50px;
   font-weight: bold;
   font-size: 16px;
-  border-radius: 20px;
+  // border-radius: 20px;
   font-family: "Calibri Light" !important ;
   color: #ffffff;
   display: inline-block;
