--- a/src/styles/base/_fonts.scss
+++ b/src/styles/base/_fonts.scss
@@ -195,3 +195,19 @@
 .icon-youtube:before {
   content: "\ea9d";
 }
+
+.icon-tiktok:before {
+  content: "";
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23000000'%3E%3Cpath d='M19.59 6.69a4.83 4.83 0 0 1-3.77-4.25V2h-3.45v13.67a2.89 2.89 0 0 1-5.2 1.74 2.89 2.89 0 0 1 2.31-4.64 2.93 2.93 0 0 1 .88.13V9.4a6.18 6.18 0 0 0-1-.05A6.74 6.74 0 0 0 5 20.8a6.74 6.74 0 0 0 10.86-5.22v-7a4.85 4.85 0 0 0 3.77 1.52v-3.4a4.85 4.85 0 0 1-1-.01z'/%3E%3C/svg%3E");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  transition: background-image 0.3s ease;
+}
+
+a:hover .icon-tiktok:before {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23faf9ff'%3E%3Cpath d='M19.59 6.69a4.83 4.83 0 0 1-3.77-4.25V2h-3.45v13.67a2.89 2.89 0 0 1-5.2 1.74 2.89 2.89 0 0 1 2.31-4.64 2.93 2.93 0 0 1 .88.13V9.4a6.18 6.18 0 0 0-1-.05A6.74 6.74 0 0 0 5 20.8a6.74 6.74 0 0 0 10.86-5.22v-7a4.85 4.85 0 0 0 3.77 1.52v-3.4a4.85 4.85 0 0 1-1-.01z'/%3E%3C/svg%3E");
+}
